--- a/src/App.scss
+++ b/src/App.scss
@@ -19,9 +19,11 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
   transition: background-color .5s;
+  background: linear-gradient(to right, #fff1eb 0%, #{Media.$bg-color-4} 100%);
+  color: #{Media.$font-dark};
 }
 
-.App main{
+.App .main{
   max-width: 1400px;
   margin: 0 auto;
   padding: 0 50px;
@@ -34,9 +36,19 @@
   }
 
   .bg-square{
+    width: 8em;
+    height: 8em;
+    //border-radius: 50%;
+    background: linear-gradient(45deg, #749195, transparent);
+    animation: flyBubble 7s linear infinite;
+    opacity: 0;
+    border-radius: 50%;
+  }
+
+  .animation{
     width: 10em;
     height: 10em;
-    border-radius: 50%;
+    //border-radius: 50%;
     background: linear-gradient(45deg, #3cd5ec, transparent);
     animation: flyBubble 7s linear infinite;
     opacity: 0;
@@ -128,12 +140,14 @@
       width: 4em;
       height: 4em;
     }
+    .App .main{
+      padding: 100px 20px;
+    }
   }
   
   .bg-bubbles{
     position: fixed;
     width: 100%;
-    z-index: -1;
     display: flex;
     bottom: 0;
     justify-content: space-around;
@@ -176,10 +190,10 @@
   }
 
   @keyframes flyBubble {
-    0%{transform: translateY(0);
+    0%{transform: translateX(0) translateY(0) rotate(0);
       opacity: 0;}
-    50%{opacity: 1;}
+    50%{opacity: 1; }
     70%{opacity: 1;}
-    100%{transform: translateY(-80vh);
+    100%{transform: translateX(200%) translateY(-90vh) rotate(360deg) ;
       opacity: 0;}
   }
