--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -47,7 +47,6 @@ section{
 }
 .about-info-bg{
     border-radius: 20px;
-    background: #d8d8d8b3;
     padding: 20px;
     text-align:justify;
     height: fit-content;
@@ -79,8 +78,7 @@ section{
   }
 
   @media #{Media.$iphone-portrait}{
-    #about{
-        padding: 0 5% 0 5%;
+    .About{
         min-height: 100vh;
     }
     .about-info img{
@@ -88,8 +86,8 @@ section{
     }
   }
   @media #{Media.$iphone-landscape} {
-    #about{
-        padding: 10%;
+    .About{
+        padding: 60px 0;
     }
   }
 
