--- a/src/css/Contact.scss
+++ b/src/css/Contact.scss
@@ -1,7 +1,7 @@
 @use '../css/Media';
 
 .Contact{
-    padding: 10% 20% 0 20%;
+    padding: 100px 200px;
     display: flex;
     align-items: center;
     min-height: 100vh;
@@ -18,9 +18,16 @@
     flex-direction: column;
     width: 50%;
     padding: 20px;
-    background-color: rgb(234 234 234);
     // box-shadow: 5px 5px 5px rgb(122, 122, 122);
     gap: .5em;
+    animation: form-slideInTop 1.5s ease-in-out;
+}
+
+@keyframes form-slideInTop {
+    0%{transform: translateY(50%);
+    opacity: .5;}
+    100%{transform: translateY(0%);
+    opacity: 1;}
 }
 #contact main label{
     font-size: calc(10px + 2vmin);
@@ -40,6 +47,7 @@ textarea, input[type="text"], input[type="email"]{
     font-size: 15px;
     border-radius: 10px 0;
     border: 1px solid grey;
+    background: #fbefeacf;
 }
 textarea{
     height: 250px;
@@ -53,11 +61,12 @@ input[type="submit"]{
     width: 100px;
     align-self: flex-end;
     border-radius: 10px 0;
-    border: 1px solid #38edd6;
+    border: 1px solid grey;
     background: white;
     font-size: 20px;
     padding: 5px;
     transition: .5s;
+    box-shadow: 2px 2px 5px grey;
 
     &:hover{
         transform: scale(1.3);
@@ -101,16 +110,31 @@ input[type="submit"]{
     display: flex;
     flex-direction: column;
     padding: 25px;
+    animation: infoWrapper-slideInRight 1.5s ease-in-out;
+}
+
+@keyframes infoWrapper-slideInRight {
+    0%{transform: translateX(50%);
+    opacity: .5;}
+    100%{transform: translateX(0);
+    opacity: 1;}
 }
 
 #contact main{
     display: flex;
     justify-content: space-between;
-    width: 80%;
+    width: 100%;
     border-radius: 20px 0;
-    background: #bbbbbb;
-    overflow: hidden;
+    background: linear-gradient(135deg, #a7bcb9, #faefea);
     box-shadow: 5px 5px 10px grey;
+    animation: contact-fadeIn 1.5s ease-in-out;
+}
+@keyframes contact-fadeIn {
+    0%{transform: scale(.8);
+        opacity: .5;
+    }
+    100%{transform: scale(1);
+    opacity: 1;}
 }
 
 .info-article{
@@ -139,15 +163,11 @@ input[type="submit"]{
 
 @media #{Media.$ipad-pro-landscape}{
     .Contact{
-        padding: 10%;
+        padding: 100px 50px;
         display: flex;
         align-items: center;
         min-height: 100vh;
-    }
-    .contact-form{
-        width: fit-content;
-    }
-    
+    }   
     textarea{
         height: 180px;
     }
@@ -155,14 +175,11 @@ input[type="submit"]{
 
   @media #{Media.$ipad-pro-portrait}{
     .Contact{
-        padding: 10%;
+        padding: 100px 30px;
         display: flex;
         align-items: center;
         min-height: 100vh;
         justify-content: flex-start;
-    }
-    .contact-form{
-        width: fit-content;
     }
     #contact article{
         flex-direction: column-reverse;
