--- a/src/App.scss
+++ b/src/App.scss
@@ -19,31 +19,36 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
   transition: background-color .5s;
-  background: linear-gradient(to right, #fff1eb 0%, #{Media.$bg-color-4} 100%);
+  background: #{Media.$app-bg-light};
   color: #{Media.$font-dark};
 }
 
-.App .main{
+.App main{
   max-width: 1400px;
   margin: 0 auto;
   padding: 0 50px;
+  z-index: 1;
+  position: relative;
 }
 
-  
-  .tab{
-    padding: 0 10% 0 10%;
-    min-height: 100vh;
-  }
+.flex-top-padding{
+  display: flex;
+  padding: 100px 0;
+  min-height: 100vh;
+  flex-flow: column;
+  gap: 2em;
+}
 
-  .bg-square{
-    width: 8em;
-    height: 8em;
-    //border-radius: 50%;
-    background: linear-gradient(45deg, #749195, transparent);
-    animation: flyBubble 7s linear infinite;
-    opacity: 0;
-    border-radius: 50%;
-  }
+
+.bg-square{
+  width: 8em;
+  height: 8em;
+  //border-radius: 50%;
+  background: linear-gradient(45deg, #749195, transparent);
+  animation: flyBubble 7s linear infinite;
+  opacity: 0;
+  border-radius: 50%;
+}
 
   .animation{
     width: 10em;
