--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -28,7 +28,7 @@ header{
     gap: .5em;
     position: fixed;
     // background-color: rgb(255 255 255 / 30%);
-    // box-shadow: 0 0 2px 0 #b2b2b2;
+    border-bottom: 1px solid rgb(207, 207, 207);
     backdrop-filter: blur(10px);
     justify-content: space-between;
     align-items: center;
