--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
   .-fl-c-sb {display: flex; flex-direction: row; justify-content: space-between;}
   .-fl-c-sa {display: flex; flex-direction: row; justify-content: space-around;}
   
+  .-drop-shadow{filter: drop-shadow(2px 4px 6px grey);}
 
   /* Hide scrollbar for Chrome, Safari and Opera */
 .App::-webkit-scrollbar {
@@ -29,6 +30,12 @@
   padding: 0 50px;
   z-index: 1;
   position: relative;
+}
+
+footer{
+    height: calc(200px + 2vmin);
+    width: 100%;
+    background: #{Media.$bg-color-3};
 }
 
 .flex-top-padding{
