Pushing latest changes

--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -40,6 +40,7 @@ section{
 
 .about-info{
     font-size: 20px;
+    display: grid;
 }
 .about-info-bg{
     border-radius: 20px;
@@ -61,7 +62,41 @@ section{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-  }
+}
+
+.resumeLink{
+    background: #3c415e;
+    margin: auto;
+    text-align: center;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+    display: flex;
+    gap: 1em;
+    align-items: center;
+}
+
+.download-wrapper{
+    width: 1em;
+    height: 1em;
+    text-align: center;
+    padding: 5px;
+    border-bottom: 4px solid white;
+
+    img{
+        width: 1em;
+        height: 1em;
+        animation: translateY-infinite 1s linear infinite;
+    }
+}
+
+@keyframes translateY-infinite {
+    0%{transform: translateY(-20%);}
+    100%{transform: translateY(30%);}
+}
 
 
 @media #{Media.$ipad-pro-landscape}{
