--- a/src/css/HomeStyle.scss
+++ b/src/css/HomeStyle.scss
@@ -74,7 +74,8 @@
    
 
     &:active{
-      background: rgb(106, 216, 235);
+      background: rgb(60 65 94);
+      color: white;
     }
 }
 
@@ -146,6 +147,36 @@
     padding: 5px 0;
     animation: scrollerDrop 1s linear 1s infinite;
 }
+
+.top-scroll-wrapper{
+  border-radius: 5px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  padding: 5px 0;
+  position: fixed;
+  right: -100%;
+  bottom: 70px;
+  opacity: 1;
+  background: #bfb2ad;
+  filter: drop-shadow(2px 4px 6px black);
+  display: grid;
+  transition: 2s;
+}
+
+.top-scroll{
+  animation: top-scroll 1s linear 2.5s infinite;
+  img{
+    width: 2em;
+    height: 2em;
+  }
+}
+
+@keyframes top-scroll {
+  0%{transform: translateY(30%);}
+  100%{transform: translateY(-10%);}
+}
+
 
 @keyframes scrollerDrop {
   0%{ transform: translateY(0);}
