--- a/src/css/Work.scss
+++ b/src/css/Work.scss
@@ -5,6 +5,7 @@
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
+    width: 100%;
 
     &::after{
         content: '';
@@ -50,9 +51,8 @@
     padding: 15px;
     border: 1px solid rgb(128, 128, 128);
     background: #f9efea;
-
-   
 }
+
 .shadow-left{
     box-shadow: -5px 5px 10px grey;
 }
@@ -72,7 +72,7 @@
         border-bottom: 15px solid transparent;
         border-left: 15px solid #{Media.$bg-color-3};
         position: absolute;
-        top: 10%;
+        top: 32px;
         right: 25px;
     }
 }
@@ -88,7 +88,7 @@
         border-bottom: 15px solid transparent;
         border-right: 15px solid #{Media.$bg-color-3}; 
         position: absolute;
-        top: 10%;
+        top: 32px;
         left: 25px;
     }
 }
