--- a/src/css/Contact.scss
+++ b/src/css/Contact.scss
@@ -9,18 +9,17 @@
     flex-direction: column;
     width: 50%;
     padding: 20px;
-    // box-shadow: 5px 5px 5px rgb(122, 122, 122);
     gap: .5em;
-    animation: form-slideInTop 1.5s ease-in-out;
+    opacity: 0;
+    transform: translateY(50%);
 }
 
 @keyframes form-slideInTop {
-    0%{transform: translateY(50%);
-    opacity: .5;}
-    100%{transform: translateY(0%);
+    to{transform: translateY(0%);
     opacity: 1;}
 }
-#contact main label{
+
+.contact-wrapper label{
     font-size: calc(10px + 2vmin);
     padding: 5px;
     font-family: monospace;
@@ -101,32 +100,31 @@ input[type="submit"]{
     display: flex;
     flex-direction: column;
     padding: 25px;
-    animation: infoWrapper-slideInRight 1.5s ease-in-out;
+    opacity: 0;
+    transform: translateX(100%);
 }
 
 @keyframes infoWrapper-slideInRight {
-    0%{transform: translateX(50%);
-    opacity: .5;}
-    100%{transform: translateX(0);
+    to{transform: translateX(0);
     opacity: 1;}
 }
 
-#contact main{
+.contact-wrapper{
     display: flex;
     justify-content: space-between;
     width: 100%;
     border-radius: 20px 0;
     background: linear-gradient(135deg, #a7bcb9, #faefea);
     box-shadow: 5px 5px 10px grey;
-    animation: contact-fadeIn 1.5s ease-in-out;
     max-width: 900px;
+    margin: 0 auto;
+    transform: scale(.6);
+    opacity: 0;
 }
+
 @keyframes contact-fadeIn {
-    0%{transform: scale(.8);
-        opacity: .5;
-    }
-    100%{transform: scale(1);
-    opacity: 1;}
+    to{transform: scale(1);
+        opacity: 1;}
 }
 
 .info-article{
@@ -188,10 +186,10 @@ input[type="submit"]{
     .Contact{
         padding: 20% 5%;
     }
-    #contact main, .contact-form, .contact-info-wrapper{
+    .contact-wrapper, .contact-form, .contact-info-wrapper{
         width: auto;
     }
-    #contact main{
+    .contact-wrapper{
         flex-direction: column-reverse;
     }
     textarea{
@@ -206,7 +204,7 @@ input[type="submit"]{
     .Contact{
         padding: 0;
     }
-    #contact main, .contact-form, .contact-info-wrapper{
+    .contact-wrapper, .contact-form, .contact-info-wrapper{
         width: auto;
     }
   }
