--- a/src/css/Skills.scss
+++ b/src/css/Skills.scss
@@ -15,7 +15,6 @@
     display: flex;
     flex-direction: column;
     width: 30em;
-    overflow: hidden;
     gap: 10px;
 }
 
@@ -33,6 +32,7 @@
     border-radius: 10px 0 10px 0;
     padding: 2px;
     border: 2px solid #7d7d9e;
+    box-shadow: 5px 5px 10px grey;
 }
 .bar{
     overflow: hidden;
