--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -23,6 +23,15 @@ section{
     to{transform: translateX(0); opacity: 1;}
 }
 
+.about-pic{
+    opacity: 0;
+    transform: translateX(50%);
+}
+
+@keyframes slideInLeft-aboutpic {
+    to{transform: translateX(0); opacity: 1;}
+}
+
 @keyframes slideInLeft {
     0%{transform: translateX(-250%);
         opacity: 0;}
@@ -49,6 +58,13 @@ section{
     display: flex;
     gap: 1em;
     align-items: center;
+    opacity: 0;
+    transform: translateY(100%);
+}
+
+@keyframes resumeSlideInBottom {
+    to{transform: translateY(0);
+    opacity: 1;}
 }
 
 .download-wrapper{
