--- a/src/css/Skills.scss
+++ b/src/css/Skills.scss
@@ -74,7 +74,7 @@
 
 .java{
     animation: progress-bar-java 3s ease-in-out;
-    width: 90%;
+    width: 0;
 }
 .html{
     animation: progress-bar-html 3s ease-in-out;
