--- a/src/css/Contact.scss
+++ b/src/css/Contact.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     width: 50%;
     padding: 20px;
-    gap: .5em;
+    gap: 1em;
     opacity: 0;
     transform: translateY(50%);
 }
@@ -38,6 +38,11 @@ textarea, input[type="text"], input[type="email"]{
     border-radius: 10px 0;
     border: 1px solid grey;
     background: #fbefeacf;
+    transition: .5s;
+
+    &:focus{
+        transform: scale(1.05);
+    }
 }
 textarea{
     height: 250px;
@@ -47,22 +52,30 @@ textarea{
     overflow: hidden;
     padding: 5px;
 }
+
 input[type="submit"]{
     width: 100px;
-    align-self: flex-end;
-    border-radius: 10px 0;
-    border: 1px solid grey;
-    background: white;
+    border: 1px solid #3c415e;
+    background: transparent;
     font-size: 20px;
-    padding: 5px;
     transition: .5s;
+    color: inherit;
     box-shadow: 2px 2px 5px grey;
 
+    max-width: fit-content;
+    border-radius: 10px 0;
+    align-self: flex-end;
+    
+    padding: 5px 25px;
+
     &:hover{
-        transform: scale(1.3);
+        background: rgb(162, 184, 198);
+        transform: scale(1.2);
     }
+
     &:active{
-        background: #38edd6;
+        background: rgb(60 65 94);
+        color: white;
     }
 }
 #textarea-label{
