--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,7 @@
   background: #{Media.$app-bg-light};
   color: #{Media.$font-dark};
   overflow: hidden;
+  font-family: sans-serif;
 }
 
 .App main{
@@ -35,10 +36,10 @@
 
 .flex-top-padding{
   display: flex;
-  padding: 100px 0;
   min-height: 100vh;
   flex-flow: column;
   gap: 2em;
+  justify-content: center;
 }
 
 
@@ -49,7 +50,6 @@
   background: linear-gradient(45deg, #749195, transparent);
   animation: flyBubble 7s linear infinite;
   opacity: 0;
-  border-radius: 50%;
 }
 
   .animation{
@@ -209,6 +209,7 @@
     min-height: fit-content;
     width: 100%;
     background: #{Media.$bg-color-3};
+    position: sticky;
   }
 
   .foot-container{
@@ -221,6 +222,7 @@
     justify-content: space-around;
     height: 100%;
   }
+
   .foo-sec{
     display: flex;
     flex-direction: column;
@@ -258,4 +260,9 @@
       width: 20px;
       height: 20px;
     }
+  }
+
+  .foot-nav{
+    display: flex;
+    gap: .5em;
   }
