--- a/src/css/Label.scss
+++ b/src/css/Label.scss
@@ -15,6 +15,8 @@
 }
 
 @keyframes labelSlideInTop {
+    60%{transform: translateY(-10%);}
+    80%{transform: translateY(5%);}
     100%{transform: translateY(0%);opacity: 1; }
 }
 
