--- a/src/css/Work.scss
+++ b/src/css/Work.scss
@@ -38,7 +38,7 @@
         border-radius: 50%;
         background: rgb(247, 245, 245);
         top: 28px;
-        border: 4px solid grey;
+        border: 4px solid #{Media.$bg-color-2};
         z-index: 1;
         right: -23px;
     }
@@ -53,7 +53,7 @@
     border-radius: 5px;
     margin: 30px 40px;
     padding: 15px;
-    border: 1px solid rgb(128, 128, 128);
+    border: 2px solid #{Media.$bg-color-2};
     background: #f9efea;
     opacity: 0;
 }
@@ -61,11 +61,11 @@
 
 
 .shadow-left{
-    box-shadow: -5px 5px 10px grey;
+    box-shadow: -5px 5px 10px #{Media.$bg-color-2};
 }
 
 .shadow-right{
-    box-shadow: 5px 5px 10px grey;
+    box-shadow: 5px 5px 10px #{Media.$bg-color-2};
 }
 
 .slidein-left-animation{
@@ -95,7 +95,7 @@
         height: 0; 
         border-top: 15px solid transparent;
         border-bottom: 15px solid transparent;
-        border-left: 15px solid #{Media.$bg-color-3};
+        border-left: 15px solid #{Media.$bg-color-2};
         position: absolute;
         top: 32px;
         right: 25px;
@@ -111,7 +111,7 @@
         height: 0; 
         border-top: 15px solid transparent;
         border-bottom: 15px solid transparent;
-        border-right: 15px solid #{Media.$bg-color-3}; 
+        border-right: 15px solid #{Media.$bg-color-2}; 
         position: absolute;
         top: 32px;
         left: 25px;
