--- a/src/css/Label.scss
+++ b/src/css/Label.scss
@@ -12,6 +12,7 @@
     filter: drop-shadow(2px 4px 6px grey);
     transform: translateY(100%);
     opacity: 0;
+    margin-bottom: 1rem;
 }
 
 @keyframes labelSlideInTop {
