--- a/src/App.scss
+++ b/src/App.scss
@@ -32,14 +32,25 @@
   padding: 0 50px;
   z-index: 1;
   position: relative;
+
+  .About, .Skills, .Work, .Contact{
+    padding: 100px 0;
+
+    @media #{Media.$iphone-portrait}{
+      padding: 70px 0;
+    }
+  }
+
+  @media #{Media.$iphone-portrait}{
+    padding: 0 20px;
+  }
 }
 
 .flex-top-padding{
   display: flex;
   min-height: 100vh;
   flex-flow: column;
-  gap: 2em;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 
@@ -146,9 +157,6 @@
     .bg-square {
       width: 4em;
       height: 4em;
-    }
-    .App .main{
-      padding: 100px 20px;
     }
   }
   
