--- a/src/css/Media.scss
+++ b/src/css/Media.scss
@@ -1,12 +1,12 @@
 
 //Media query for Ipad Landscape and portrait
-$ipad-pro: "only screen and (min-device-width: 724px) and (max-device-width: 1200px) and (min-height:724px) and (-webkit-min-device-pixel-ratio: 2)";
+$ipad-pro-11: "only screen and (min-width: 834px) and (max-height: 1194px) and (-webkit-min-device-pixel-ratio: 2)";
 
 //Media query for Ipad Landscape
-$ipad-pro-landscape: "only screen and (min-device-width: 724px) and (max-device-width: 1200px) and (min-height:724px) and (-webkit-min-device-pixel-ratio: 2) and (orientation : landscape)";
+$ipad-pro-landscape: "only screen and (min-width: 834px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation : landscape)";
 
 //Media query for Ipad Portrait
-$ipad-pro-portrait: "only screen and (min-device-width: 724px) and (max-device-width: 1200px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2)";
+$ipad-pro-portrait: "only screen and (min-width: 834px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)";
 
 //Media query for iphone Landscape and portrait
 $iphone-: "only screen and (min-width: 320px) and (max-height: 640px)";
