--- a/src/css/Media.scss
+++ b/src/css/Media.scss
@@ -1,21 +1,21 @@
 
 //Media query for Ipad Landscape and portrait
-$ipad-pro-11: "only screen and (min-width: 834px) and (max-height: 1194px) and (-webkit-min-device-pixel-ratio: 2)";
+$ipad-pro-11: "only screen and (min-width: 834px) and (min-height:1024px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 2)";
 
 //Media query for Ipad Landscape
-$ipad-pro-landscape: "only screen and (min-width: 834px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation : landscape)";
+$ipad-pro-landscape: "only screen and (min-width: 834px) and (min-height:834px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation : landscape)";
 
 //Media query for Ipad Portrait
-$ipad-pro-portrait: "only screen and (min-width: 834px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)";
+$ipad-pro-portrait: "only screen and (min-width: 834px) and (min-height:1024px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)";
 
 //Media query for iphone Landscape and portrait
-$iphone-: "only screen and (min-width: 320px) and (max-height: 640px)";
+$iphone: "only screen and (min-device-width: 360px) and (max-device-width: 833px)";
 
 //Media query for iphone Landscape
-$iphone-landscape: "only screen and (min-width: 320px) and (max-height: 640px) and (orientation: landscape)";
+$iphone-landscape: "only screen and (max-device-width: 960px) and (max-device-height:640px) and (orientation : landscape)";
 
 //Media query for iphone Portrait
-$iphone-portrait: "only screen and (max-width: 480px) and (min-height:600px) and (orientation: portrait)";
+$iphone-portrait: "only screen and (max-device-width: 640px) and (max-device-height:960px) and (orientation : portrait)";
 
 
 //Color palettes
